<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <Button
                android:id="@+id/register_user"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="310dp"
                android:background="@drawable/gradient_item"
                android:text="@string/register_text"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:layout_alignParentRight="true" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="152dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/ic_forum"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginBottom="29dp"
                android:text="@string/login_screen_text"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:background="@drawable/gradient_item"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="E-Mail"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"/>

            <EditText
                android:layout_marginBottom="20dp"
                android:id="@+id/login_password"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:background="@drawable/gradient_item"
                android:drawableLeft="@drawable/ic_visibility_off"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="18sp"
                android:layout_centerInParent="true"
                android:layout_below="@+id/login_email" />
            <Button
                android:layout_centerInParent="true"
                android:layout_below="@+id/login_password"
                android:id="@+id/login_user"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/gradient_item"
                android:ems="10"
                android:text="@string/login_text"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/login_user"
                android:layout_centerHorizontal="true"
                android:background="#3D5069"
                android:text="@string/forgot_text"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>