<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:id="@+id/profil_icon"
            android:src="@drawable/ic_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user1"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="7dp"
            android:text="@string/write_username_hint"
            android:textColor="@color/colorWhite"
            android:layout_toRightOf="@+id/profil_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_typing"
            android:text="@string/user_typing"
            android:visibility="invisible"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/user1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user2"
            android:layout_below="@+id/user1"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorWhite"
            android:layout_toRightOf="@+id/profil_icon"
            android:text="@string/write_username_hint"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/chat_list_view"
            android:background="@drawable/images" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_insert_emoticon"
            android:backgroundTint="@color/colorPrimary"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_marginEnd="75dp"
            android:layout_marginStart="40dp"
            android:textColor="@color/colorWhite"
            android:layout_height="50dp"
            android:id="@+id/sendText"
            android:textColorHint="@color/colorWhite"
            android:paddingStart="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/write_something"
            android:background="@color/colorPrimaryDark"/>
        <Button
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/senderBtn"
            android:text="@string/send_something"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>