<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background_with_color">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting1"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorBlack"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting2"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Switch
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="viewStart"
                    android:gravity="start" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/username_field"
                    android:layout_height="wrap_content"
                    android:text="@string/setting3"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorBlack"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:id="@+id/display_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorBlack"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@+id/username_field"
                    android:layout_toRightOf="@+id/username_field"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/write_username_hint"
                     android:inputType="textCapCharacters|textVisiblePassword"
                     />

            </RelativeLayout>
        </LinearLayout>
</ScrollView>